// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "pip-services.users.roles.version1";
option java_outer_classname = "RolesProtoV1";
option objc_class_prefix = "ROLES_CMD_V1";

package roles_v1;

message ErrorDescription {
  string type = 1;
  string category = 2;
  string code = 3;
  string correlation_id = 4;
  string status = 5;
  string message = 6;
  string cause = 7;
  string stack_trace = 8;
  map<string, string> details = 9;
}

message PagingParams {
    int64 skip = 1;
    int32 take = 2;
    bool total = 3;
}

message UserRoles {
    string id = 1;
    string update_time = 2;
    repeated string roles = 3;
}

message UserRolesPage {
    int64 total = 1;
    repeated UserRoles data = 2;
}

// The roles service definition.
service Roles {
  rpc get_roles_by_filter (RolesPageRequest) returns (RolesPageReply) {}
  rpc get_roles_by_id (RoleIdRequest) returns (RolesReply) {}
  rpc set_roles (RolesRequest) returns (RolesReply) {}
  rpc grant_roles (RolesRequest) returns (RolesReply) {}
  rpc revoke_roles (RolesRequest) returns (RolesReply) {}
  rpc authorize (RolesRequest) returns (AuthorizeReply) {}
}

// The request message containing the role page request.
message RolesPageRequest {
  string correlation_id = 1;
  map<string, string> filter = 2;
  PagingParams paging = 3;
}

// The response message containing the role page response
message RolesPageReply {
  ErrorDescription error = 1;
  UserRolesPage page = 2;
}

// The request message containing the role id request.
message RoleIdRequest {
  string correlation_id = 1;
  string user_id = 2;
}

// The request message containing the roles request.
message RolesRequest {
  string correlation_id = 1;
  string user_id = 2;
  repeated string roles = 3;
}

// The response message containing the roles response
message RolesReply {
  ErrorDescription error = 1;
  repeated string roles = 2;
}

// The response message containing the authorize response
message AuthorizeReply {
  ErrorDescription error = 1;
  bool authorized = 2;
}
